--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "eleventy": "npx eleventy --serve"
+    "start": "npx eleventy --serve"
   },
   "keywords": [],
   "author": "",
